made second section mobile friendly

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="section-1">
         <h1>ADIDAS 5.10 CLIMBING SHOES</h1>
         <p>
-          The only way is up. Meet the best technical climbing shoewith flex
+          The only way is up. Meet the best technical climbing shoe with flex
           technology. <br />
           Slip into Adidas Five Ten climbing shoes and you're ready to start.
         </p>
@@ -93,34 +93,34 @@
       <div class="cards">
         <div class="card">
           <img src="./images/shoe1.png" alt="shoe1" />
-          <h4>Lorem ipsum dolor sit.</h4>
+          <h4>AGGRESSIVE DOWNTURN SHAPE</h4>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae,
-            unde?
+            Shaped to secure as a hook to keep climbers locked onto vertical or
+            steep terrain.
           </p>
         </div>
         <div class="card">
           <img src="./images/shoe2.png" alt="shoe2" />
-          <h4>Lorem ipsum dolor sit.</h4>
+          <h4>CRUISING COMFORT</h4>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae,
-            unde?
+            Easy break-in and comfort from the start to finish with the unlined
+            microfiber upper.
           </p>
         </div>
         <div class="card">
           <img src="./images/shoe3.png" alt="shoe3" />
-          <h4>Lorem ipsum dolor sit.</h4>
+          <h4>SURE-FOOTED GRIP</h4>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae,
-            unde?
+            Stealth® C4™ rubber outsole equips you with the unbeatable grip and
+            unrivaled edging.
           </p>
         </div>
         <div class="card">
           <img src="./images/shoe4.png" alt="shoe4" />
-          <h4>Lorem ipsum dolor sit.</h4>
+          <h4>FULL HEEL COVERAGE</h4>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae,
-            unde?
+            More rubber and greater friction, for those all important heel
+            hooking moments.
           </p>
         </div>
       </div>
